# ev-earnings-rag

./: .gitignore  README.md  app.py  hyperbrowser_example.py  main.py  pyproject.toml  test.ipynb
scripts/: ingest.py  retriever.py
transcripts/: RIVN_Q4_2025.json  TSLA_Q4_2025.json
